openshift/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
"  name: sentiment-backend" 
spec: 
"  selector:" 
"    app: sentiment-backend" 
"  ports:" 
"    - port: 8080" 
"      targetPort: 8080"
